k8s/ingress-monitoring/logging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: logging.yusufluai.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
